--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,10 +5,12 @@
         <item name="colorPrimary">@color/colorTheme</item>
         <item name="colorPrimaryVariant">@color/colorTheme</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="backgroundColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/colorTheme</item>
         <item name="colorSecondaryVariant">@color/colorTheme</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="textFillColor">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
