--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorTheme</item>
         <item name="colorPrimaryVariant">@color/colorTheme</item>
-        <item name="colorOnPrimary">@color/colorTheme</item>
+        <item name="colorOnPrimary">@color/much_black</item>
         <!-- Secondary brand color. -->
         <item name="backgroundColor">@color/much_black</item>
         <item name="colorSecondary">@color/colorTheme</item>
@@ -12,6 +12,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowBackground">@color/much_black</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
